# zhipuai-mate

./: .gitignore  README.md  pyproject.toml
zhipuai_mate/: __init__.py
zhipuai_mate/chat_models/: __init__.py  base.py
zhipuai_mate/embeddings/: __init__.py  base.py
